--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
+    <link rel="stylesheet" type="text/css" href="../hovedopgave/src/assets/main.css" />
   </head>
   <body>
-    <div id="app"></div>
+
+    <comp></comp>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+    <script src="app.js"></script>
     <script type="module" src="/src/main.js"></script>
+
+    <h1> hej12313</h1>
   </body>
 </html>
+
