--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="app.js"></script>
     <script type="module" src="/src/main.js"></script>
 
-    <h1> hej12313</h1>
+    <h1> Kasper</h1>
   </body>
 </html>
 
