--- a/index.html
+++ b/index.html
@@ -8,13 +8,8 @@
     <link rel="stylesheet" type="text/css" href="../hovedopgave/src/assets/main.css" />
   </head>
   <body>
-
-    <comp></comp>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-    <script src="app.js"></script>
+    <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-
-    <h1> Kasper</h1>
   </body>
 </html>
 
