--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+
+    <script src="/dist/main.js"></script>
   </body>
 </html>
 
