--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-
+    <div id="app1"></div>
     <script src="/dist/main.js"></script>
   </body>
 </html>
