--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="app1"></div>
     <script type="module" src="/src/main.js"></script>
 
     <script src="/dist/main.js"></script>
