det virker med header og footer

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" type="text/css" href="../hovedopgave/src/assets/main.css" />
   </head>
   <body>
-    <div id="app"></div>
-    <div id="app1"></div>
+    <div id="header"></div>
+    <div id="footer"></div>
     <script type="module" src="/src/main.js"></script>
 
     <script src="/dist/main.js"></script>
