arragementer kommer i console

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div id="header"></div>
     <div id="footer"></div>
+    <div id="arrangementer"></div>
     <script type="module" src="/src/main.js"></script>
 
     <script src="/dist/main.js"></script>
