--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="header"></div>
+    <div id="kontakt"></div>
     <div id="footer"></div>
     <div id="arrangementer"></div>
     <script type="module" src="/src/main.js"></script>
