data fra firebase kommer på side

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <div id="header"></div>
+    <div id="arrangementer_section"></div>
     <div id="kontakt"></div>
     <div id="footer"></div>
-    <div id="arrangementer"></div>
     <script type="module" src="/src/main.js"></script>
 
     <script src="/dist/main.js"></script>
