--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="arrangementer_section"></div>
     <div id="kontakt"></div>
     <div id="footer"></div>
+    <dir id="shortcut"></dir>
     <script type="module" src="/src/main.js"></script>
 
     <script src="/dist/main.js"></script>
