--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div id="header"></div>
     <div id="arrangementer_section"></div>
+    <div id="jobportalen"></div>
     <div id="kontakt"></div>
     <div id="footer"></div>
     <dir id="shortcut"></dir>
