Hvad kan vi tilbyde er rykket til toppen af siden

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" type="text/css" href="../hovedopgave/src/assets/main.css" />
   </head>
   <body>
-    <div id="header"></div>
+    <div id="header"></div>  
+    <div id="shortcut"></div>
     <div id="arrangementer_section"></div>
     <div id="jobportalen"></div>
     <div id="kontakt"></div>
     <div id="footer"></div>
-    <dir id="shortcut"></dir>
+  
     <script type="module" src="/src/main.js"></script>
 
     <script src="/dist/main.js"></script>
