--- a/index.html
+++ b/index.html
@@ -2,24 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karrierevejledning</title>
-    <link rel="stylesheet" type="text/css" href="../hovedopgave/src/assets/main.css" />
   </head>
   <body>
-    <div id="navigation"></div>  
-    <div id="header"></div>  
-    <div id="shortcut"></div>
-    <div id="tjekliste"></div>
-    <div id="arrangementer_section"></div>
-    <div id="jobportalen"></div>
-    <div id="kontakt"></div>
-    <div id="footer"></div>
-  
+    <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-
-    <script src="/dist/main.js"></script>
   </body>
 </html>
 
